NEWS. added newly accepted neurips paper and pcmj paper

--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@
 							<h3 id="news-travel">News & Travel</h3>
 							<ul class="news">
 
+								<li class="row-fluid">
+                                    <span class="news-date span3">Sep, 2024</span>
+                                    <span class="news-content span9">Our paper <a href="" target="_blank">"TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices"</a> is accepted by NeurIPS 2024 <font color="red">[Paper]</font></span>
+                                </li>
+
                                 <li class="row-fluid">
                                     <span class="news-date span3">Aug, 2024</span>
                                     <span class="news-content span9">Our team's recent research effort has been commercialised with <a href="https://research.samsung.com/blog/Sentimental-and-Object-Preserving-On-Device-AI-Wallpaper" target="_blank">On-device AI Wallpaper</a> enabled on Samsung AI phone series: Galaxy S24, Z Flip 6 and Fold 6! <font color="red">[AI Product]</font>
@@ -406,6 +411,22 @@
 										| <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/kwon_tinytrain_icml24.bib" target="_blank">BibTex</a>
 										| <a href="https://arxiv.org/abs/2307.09988" target="_blank">Link</a>
+									</p></li>
+
+									<li id="publication-tinytta">
+									<p>
+										<b>TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices</b><br>
+										<font color="#aaaaaa">Hong Jia, <font color="#000000"><u>Young D. Kwon</u></font>, Alessio Orsino, Ting Dang, Domenico Talia, and Cecilia Mascolo</font><br>
+										<i><font color="red">NeurIPS 2024</font></i>
+										| <a href="papers/bibs/jia_tinytta_neurips24.bib" target="_blank">BibTex</a>
+										| <a href="https://neurips.cc/virtual/2024/poster/94778" target="_blank">Link</a>
+									</p></li>
+
+									<li id="publication-ur2m-journal">
+									<p>
+										<b>A Framework for On-Device Uncertainty-Aware Event Detection on Microcontrollers</b><br>
+										<font color="#aaaaaa">Hong Jia, <font color="#000000"><u>Young D. Kwon</u></font>, Dong Ma, Nhat Pham, Lorena Qendro, Tam Vu, and Cecilia Mascolo</font><br>
+										<i><font color="red">PMCJ 2024</font></i>
 									</p></li>
 
 									<li id="publication-ur2m">
