--- a/log.html
+++ b/log.html
@@ -123,6 +123,11 @@
                             <ul class="news">
 
                                 <li class="row-fluid">
+                                    <span class="news-date span3">Sep, 2024</span>
+                                    <span class="news-content span9">Our paper <a href="" target="_blank">"TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices"</a> is accepted by NeurIPS 2024 <font color="red">[Paper]</font></span>
+                                </li>
+                                
+                                <li class="row-fluid">
                                     <span class="news-date span3">Aug, 2024</span>
                                     <span class="news-content span9">Our team's recent research effort has been commercialised with <a href="https://research.samsung.com/blog/Sentimental-and-Object-Preserving-On-Device-AI-Wallpaper" target="_blank">On-device AI Wallpaper</a> enabled on Samsung AI phone series: Galaxy S24, Z Flip 6 and Fold 6! <font color="red">[AI Product]</font>
                                     </span>
