--- a/research.html
+++ b/research.html
@@ -173,7 +173,23 @@
 										| <a href="papers/bibs/kwon_tinytrain_icml24.bib" target="_blank">BibTex</a>
 										| <a href="https://arxiv.org/abs/2307.09988" target="_blank">Link</a>
 									</p></li>
-									
+
+									<li id="publication-tinytta">
+									<p>
+										<b>TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices</b><br>
+										<font color="#aaaaaa">Hong Jia, <font color="#000000"><u>Young D. Kwon</u></font>, Alessio Orsino, Ting Dang, Domenico Talia, and Cecilia Mascolo</font><br>
+										<i><font color="red">NeurIPS 2024</font></i>
+										| <a href="papers/bibs/jia_tinytta_neurips24.bib" target="_blank">BibTex</a>
+										| <a href="https://neurips.cc/virtual/2024/poster/94778" target="_blank">Link</a>
+									</p></li>
+
+									<li id="publication-ur2m-journal">
+									<p>
+										<b>A Framework for On-Device Uncertainty-Aware Event Detection on Microcontrollers</b><br>
+										<font color="#aaaaaa">Hong Jia, <font color="#000000"><u>Young D. Kwon</u></font>, Dong Ma, Nhat Pham, Lorena Qendro, Tam Vu, and Cecilia Mascolo</font><br>
+										<i><font color="red">PMCJ 2024</font></i>
+									</p></li>
+
 									<li id="publication-ur2m">
 									<p>
 										<b>UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers</b><br>
