Updated travel history

--- a/files/travelmap.html
+++ b/files/travelmap.html
@@ -76,9 +76,12 @@
                 ['Turkey', 3],
                 ['Taiwan', 3],
                 ['Germany', 3],
+                ['Austria', 3],
+                ['Mexico', 2],
                 ['Finland', 2],
                 ['Macau', 2],
                 ['Japan', 2],
+                ['France', 2],
                 ['Canada', 2],
                 ['Malaysia', 2],
                 ['Singapore', 2],
@@ -88,7 +91,6 @@
                 ['Estonia', 2],
                 ['Hungary', 2],
                 ['Czech Republic', 2],
-                ['Austria', 2],
                 ['Russia', 1]
             ]);
             var options = {};
@@ -134,9 +136,12 @@
                     <li> Turkey </li>
                     <li> Taiwan </li>
                     <li> Germany </li>
+                    <li> Austria </li>
+                    <li> Mexico </li>
                     <li> Finland </li>
                     <li> Macau </li>
                     <li> Japan </li>
+                    <li> France </li>
                     <li> Canada </li>
                     <li> Malaysia </li>
                     <li> Singapore </li>
@@ -146,7 +151,6 @@
                     <li> Estonia </li>
                     <li> Hungary </li>
                     <li> Czech Republic </li>
-                    <li> Austria </li>
                     <li> Russia </li>
                 </ol>
             </tab2>
