--- a/log.html
+++ b/log.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Young D. Kwon | News & Travel Log @ Computer Laboratory, University of Cambridge</title>
+        <title>Young D. Kwon | News & Travel Log</title>
         <meta name="description" content="Young D. Kwon's News & Travel Log.">
         <meta name="author" content="Young D. Kwon">
 
@@ -79,7 +79,7 @@
                         </ul>
 
                         <!-- <img class="profile" src="images/Me/1712_IMG_Young.jpg" alt="profile photo"><br /><br /> -->
-                        <img class="profile" src="images/Me/2008_Young.jpg" alt="profile photo"><br /><br />
+                        <img class="profile" src="images/Me/2502_Young.jpeg" alt="profile photo"><br /><br />
                         Research Scientist<br/>
                         <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center-Cambridge</a><br>
                         <a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a><br/><br/>
