--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Young D. Kwon | On-device ML and Continual Learning @ Computer Laboratory, University of Cambridge</title>
-        <meta name="description" content="Young D. Kwon is a graduate student in Computer Science. He studies On-device ML and Contiual Learning by focusing on resource-constrained mobile systems to enable the context-aware adaptation to the changing environments.">
+        <title>Young D. Kwon | Efficient (Generative) AI Systems Researcher @ Samsung AI Center-Cambridge, University of Cambridge</title>
+        <meta name="description" content="Young D. Kwon is a Efficient (Generative) AI Systems Researcher at Samsung AI Center-Cambridge, University of Cambridge.">
         <meta name="author" content="Young D. Kwon">
 
 		<!--Mobile Specific Metas-->
@@ -87,7 +87,7 @@
 		                    <li class="inactive"><a href="bio.html">Bio</a></li>
 		            	</ul>
 						<!-- <img class="profile" src="images/Me/1712_IMG_Young.jpg" alt="profile photo"><br /><br /> -->
-						<img class="profile" src="images/Me/2008_Young.jpg" alt="profile photo"><br /><br />
+						<img class="profile" src="images/Me/2502_Young.jpeg" alt="profile photo"><br /><br />
 					    Research Scientist<br/>
 					    <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center-Cambridge</a><br>
 				        <a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a><br/><br/>
@@ -133,32 +133,27 @@
 						<!--About-->
 					    <div class="row-fluid bio" id="About">
 							<p>
-								I am a Research Scientist at <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center-Cambridge</a> and a doctoral candidate in Computer Science at the <a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a>. I am fortunate to work with <a href="https://scholar.google.co.uk/citations?user=EU-ESvsAAAAJ&hl=en" target="_blank">Dr. Sourav Bhattacharya</a> and <a href="https://www.cl.cam.ac.uk/~cm542/" target="_blank">Prof. Cecilia Mascolo</a>.	
-
-								<!-- I worked with <a href="https://sites.google.com/view/jagmohan-chauhan/home?authuser=0" target="_blank">Dr. Jagmohan Chauhan</a> and <a href="https://www.cl.cam.ac.uk/~cm542/" target="_blank">Prof. Cecilia Mascolo</a> in the summer of 2020 as a research assistant and 2019 as a visitor. Also, I worked as a research assistant with <a href="https://www.cse.ust.hk/faculty/dimitris/" target="_blank">Prof. Dimitris Papadias</a> at <a href="https://www.ust.hk/" target="_blank">HKUST</a> from February 2020 to June 2020. -->
-							</p>
-							<!-- <br> -->
-
-							<!-- <p>
-								I received my M.Phil. in Computer Science and Engineering from <a href="https://www.ust.hk/" target="_blank">HKUST</a>, where I was advised by <a href="https://www.cse.ust.hk/~panhui/" target="_blank">Prof. Pan Hui</a> and <a href="http://www.cse.ust.hk/~raywong/" target="_blank">Prof. Raymond Wong</a>. I received my B.S. in Semiconductor Systems Engineering from <a href="https://www.skku.edu/eng/" target="_blank">SKKU</a>, where <a href="http://iislab.skku.edu/iish/" target="_blank">Prof. Jee-Hyong Lee</a> advised me.
-							</p> -->
-							<!-- <br> -->
-
-							<p>
-
-								I am passionate about drastically <b>optimising On-device AI processing</b> via <b>algorithm & system innovations</b>, enabling various and exciting real-world applications for users, thereby pushing the boundaries of what's possible <b>within strict hardware constraints</b>. 
-
-								<!-- My research focuses on <b>resource-constrained</b> mobile systems to enable <b>context-aware adaptation</b> to the changing environments (e.g., new inputs and users) in real-time while preserving privacy. To this end, I develop new methods and systems and leverage knowledge from <b>On-Device Machine Learning, Continual Learning, and Multi-Task Learning</b>. -->
-
-								<!-- To this end, I leverage computational methods from on-device machine learning, continual learning, and network science. -->
-
-								<!-- My research in Ubiquitous and Social Computing attempts <b>to better understand, model, and predict users' behaviors at scale</b> in both online and offline platforms. I also focus on resource-constrained mobile systems <b>to enable context-aware adaptation to the changing environments</b> (e.g., new inputs and users) in real-time while preserving privacy. I leverage computational methods from machine learning, natural language processing, and social network analysis. -->
-
-								<!-- His research focus on Ubiquitous and Social Computing is to better <b>understand user behaviors</b> at scales in online and offline platforms to improve <b>human well-being</b> and build <b>robust social systems</b>. He leverages computational methods from machine learning, natural language processing, and social network analysis. -->
+								I am a Research Scientist at <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center-Cambridge</a> working with <a href="https://steliosven10.github.io/" target="_blank">Dr. Stylianos I. Venieris</a> and <a href="https://scholar.google.co.uk/citations?user=EU-ESvsAAAAJ&hl=en" target="_blank">Dr. Sourav Bhattacharya</a>.
+								Prior to that, I have obtained a PhD from the <a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a> under <a href="https://www.cl.cam.ac.uk/~cm542/" target="_blank">Prof. Cecilia Mascolo</a>. My research bridges machine learning and systems through innovative <b>on-device AI processing</b> techniques, successfully commercialising breakthrough technologies for Samsung Galaxy devices that bring powerful AI capabilities to millions of users. 
 							</p>
 
 							<p>
-								To this end, I develop new methods and systems and leverage knowledge from <b>On-Device Machine Learning, Continual Learning, and Multi-Task Learning</b>.
+								My work has earned the <b>Best Paper Award at SEC '21</b> and <b>Samsung Best Paper Silver Award 2024</b>, with publications in ICML, NeurIPS, SenSys, IPSN, and IMWUT/UbiComp. I develop resource-efficient solutions that make advanced AI accessible on everyday devices with strict hardware constraints.
+							</p>
+
+							<p>
+								<b>Research Focus:</b>
+								<ul>
+								<li>
+									<b>On-Device Training & Continual Adaptation</b>: Enabling devices to learn locally with minimal data, preserving privacy and improving personalisation
+								</li>
+								<li>
+									<b>Efficient Generative AI Systems</b>: Reimagining resource-intensive generative models for mobile devices
+								</li>
+								<li>
+									<b>System-Algorithm Co-Design for IoT</b>: Creating optimised solutions that synergise hardware capabilities and algorithmic innovations for resource-constrained environments
+								</li>
+								</ul>
 							</p>
 
 
