- Added leantta, tinytta, phd_thesis, metaclbench papers and bibtex
- Added award information about tinytrain

- Edited intro description

- Added AI projects

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 							</p>
 
 							<p>
-								Recently recognised as an <b>ML and Systems Rising Star</b>, my work has earned the <b>Best Paper Award at SEC '21</b> and <b>Samsung Best Paper Silver Award 2024</b>, with publications in ICML, NeurIPS, SenSys, IPSN, and IMWUT/UbiComp. I develop resource-efficient solutions that make advanced AI accessible on everyday devices with strict hardware constraints.
+								My work has earned the <b>Best Paper Award at SEC '21</b> and <b>Samsung Best Paper Silver Award 2024</b>, with publications in ICML, NeurIPS, SenSys, IPSN, and IMWUT/UbiComp. I develop resource-efficient solutions that make advanced AI accessible on everyday devices with strict hardware constraints.
 							</p>
 
 							<p>
@@ -367,6 +367,29 @@
 							</div>
 						  </div> -->
 
+						<!--AI_Products-->
+						<div class="row-fluid">
+							<div class="span12">
+								<div class="section">AI Products</div>
+								<ul>
+
+									<li id="aiproducts-wallpaper">
+									<p>
+										<b>Personalized On-Device AI Wallpaper</b><br>
+										<i><font color="red">Galaxy S24 & S25, Z Flip6 & Fold6</font></i>
+										| <a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2600s" target="_blank">Samsung Galaxy Unpacked Event</a>
+									</p></li>
+
+									<li id="aiproducts-super-resolution">
+										<p>
+											<b>Efficient On-Device Super Resolution</b><br>
+											<i><font color="red">Galaxy S25</font></i>
+										</p></li>
+								</ul>
+							</div>
+					    </div>
+						<hr>
+						<br>
 
 
 						<!--Preprints-->
@@ -374,6 +397,32 @@
 							<div class="span12">
 								<div class="section">Preprints</div>
 								<ul>
+
+									<!-- <li id="preprints-mobilepicasso">
+										<p>
+											<b>MobilePicasso: On-Device High-Resolution Image Editing with Hallucination-Aware Loss and Adaptive Context-Preserving Tiling</b><br>
+											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Abhinav Mehrotra, Malcolm Chadwick, Albert Gil Ramos, and Sourav Bhattacharya</font><br>
+											<i><font color="red">arXiv 2025</font></i>
+										</p></li> -->
+
+									<li id="preprints-metaclbench">
+										<p>
+											<b>MetaCLBench: Meta Continual Learning Benchmark on Resource-Constrained Edge Devices</b><br>
+											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Sijia Li*, Lik-Hang Lee, and Pan Hui</font><br>
+											<i><font color="red">arXiv 2025</font></i>
+											| <a href="papers/articles/li_kwon_metaclbench_2025.pdf" target="_blank">PDF</a>
+											| <a href="https://arxiv.org/abs/" target="_blank">Link</a>
+											| * Co-first authors
+										</p></li>
+
+									<li id="preprints-leantta">
+										<p>
+											<b>LeanTTA: A Backpropagation-Free and Stateless Approach to Quantized Test-Time Adaptation on Edge Devices</b><br>
+											<font color="#aaaaaa">Cynthia Dong, Hong Jia, <font color="#000000"><u>Young D. Kwon</u></font>, Georgios Rizos, and Cecilia Mascolo</font><br>
+											<i><font color="red">arXiv 2025</font></i>
+											| <a href="papers/articles/dong_leantta_2025.pdf" target="_blank">PDF</a>
+											| <a href="https://arxiv.org/abs/2503.15889v1" target="_blank">Link</a>
+										</p></li>
 
 									<li id="preprints-hidenseek">
 									<p>
@@ -406,6 +455,7 @@
 										| <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/kwon_tinytrain_icml24.bib" target="_blank">BibTex</a>
 										| <a href="https://arxiv.org/abs/2307.09988" target="_blank">Link</a>
+										<br><award><b>Samsung Best Paper Silver Award 2024</b></award>
 									</p></li>
 
 									<li id="publication-tinytta">
@@ -413,15 +463,12 @@
 										<b>TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices</b><br>
 										<font color="#aaaaaa">Hong Jia, <font color="#000000"><u>Young D. Kwon</u></font>, Alessio Orsino, Ting Dang, Domenico Talia, and Cecilia Mascolo</font><br>
 										<i><font color="red">NeurIPS 2024</font></i>
+										| <a href="papers/articles/jia_tinytta_neurips24.pdf" target="_blank">PDF</a>
+										| <a href="papers/poster/poster_jia_tinytta_neurips24.png" target="_blank">Poster</a>
+										| <a href="papers/slides/slides_jia_tinytta_neurips24.pdf" target="_blank">Slides</a>
 										| <a href="papers/bibs/jia_tinytta_neurips24.bib" target="_blank">BibTex</a>
 										| <a href="https://neurips.cc/virtual/2024/poster/94778" target="_blank">Link</a>
-									</p></li>
-
-									<li id="publication-ur2m-journal">
-									<p>
-										<b>A Framework for On-Device Uncertainty-Aware Event Detection on Microcontrollers</b><br>
-										<font color="#aaaaaa">Hong Jia, <font color="#000000"><u>Young D. Kwon</u></font>, Dong Ma, Nhat Pham, Lorena Qendro, Tam Vu, and Cecilia Mascolo</font><br>
-										<i><font color="red">PMCJ 2024</font></i>
+										| <a href="https://github.com/h-jia/TTE" target="_blank">Code</a>
 									</p></li>
 
 									<li id="publication-ur2m">
@@ -444,17 +491,6 @@
 										<br><award><b>Oral Presentation, Full Paper Acceptance Rate: 18.9%</b></award>
 									</p></li>
 
-									<li id="publication-usergpt">
-									<p>
-										<b>ChatGPT in education: A blessing or a curse? A qualitative study exploring early adopters’ utilization and perceptions</b><br>
-										<font color="#aaaaaa">Reza Hadi Mogavi, Chao Deng, Justin Juho Kim, Pengyuan Zhou, <font color="#000000"><u>Young D. Kwon</u></font>, Ahmed Hosny Saleh Metwally, Ahmed Tlili, Simone Bassanelli, Antonio Bucchiarone, Sujit Gujar, Lennart E. Nacke, and Pan Hui</font><br>
-										<i><font color="red">Computers in Human Behavior: Artificial Humans 2023</font></i>
-										| <a href="papers/articles/mogavi_usergpt_chb23.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/mogavi_usergpt_chb23.bib" target="_blank">BibTex</a>
-										| <a href="https://doi.org/10.1016/j.chbah.2023.100027" target="_blank">Link</a>
-									</p></li>
-
-
 									<li id="publication-yono">
 									<p>
 										<b>YONO: Modeling Multiple Heterogeneous Neural Networks on Microcontrollers</b><br>
@@ -476,16 +512,6 @@
 										<br><award><b>Oral Presentation, Full Paper Acceptance Rate: 17.8%</b></award>
 									</p></li>
 
-									<li id="publication-few-shot">
-									<p>
-										<b>Exploring On-Device Learning Using Few Shots for Audio Classification</b><br>
-										<font color="#aaaaaa">Jagmohan Chauhan, <font color="#000000"><u>Young D. Kwon</u></font>, and Cecilia Mascolo</font><br>
-										<i><font color="red">EUSIPCO 2022</font></i>
-										| <a href="papers/articles/chauhan_on-device-fsl_euspico22.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/chauhan_on-device-fsl_euspico22.bib" target="_blank">BibTex</a>
-										| <a href="https://ieeexplore.ieee.org/document/9909551" target="_blank">Link</a>
-									</p></li>
-
 									<li id="publication-myokey">
 									<p>
 										<b>MyoKey: Inertial Motion Sensing and Gesture-based QWERTY Keyboard for Extended Realities</b><br>
@@ -496,55 +522,13 @@
 										| <a href="https://ieeexplore.ieee.org/document/9737726" target="_blank">Link</a>
 									</p></li>
 
-									<li id="publication-anchor">
-									<p>
-										<b>Causal Analysis on the Anchor Store Effect in a Location-based Social Network</b><br>
-										<font color="#aaaaaa">Anish Krishna Vallapuram, <font color="#000000"><u>Young D. Kwon</u></font>, Lik-Hang Lee, Fengli Xu, Pan Hui</font><br>
-										<i><font color="red">ASONAM 2022</font></i>
-										| <a href="papers/articles/vallapuram_causal_asonam22.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/vallapuram_causal_asonam22.bib" target="_blank">BibTex</a>
-										| <a href="https://www.computer.org/csdl/proceedings-article/asonam/2022/10068687/1LKx71udlcI" target="_blank">Link</a>
-									</p></li>
-
-									<li id="publication-gpu-training-perfail">
-									<p>
-										<b>Enabling On-Device Smartphone GPU based Training: Lessons Learned</b><br>
-										<font color="#aaaaaa">Anish Das, <font color="#000000"><u>Young D. Kwon</u></font>, Jagmohan Chauhan, and Cecilia Mascolo</font><br>
-										<i><font color="red">PerFail (PerCom 2022 Workshop)</font></i>
-										| <a href="papers/articles/das_gpu-training_percom22.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/das_gpu-training_percom22.bib" target="_blank">BibTex</a>
-										| <a href="https://ieeexplore.ieee.org/document/9767442" target="_blank">Link</a>
-									</p></li>
-
-									<li id="publication-cl-benchmark">
-									<p>
-										<b>Exploring System Performance of Continual Learning for Mobile and Embedded Sensing Applications</b><br>
-										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Jagmohan Chauhan, Abhishek Kumar, Pan Hui, and Cecilia Mascolo</font><br>
-										<i><font color="red">SEC 2021</font></i>
-										| <a href="papers/articles/kwon_exploring_sec21.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/kwon_exploring_sec21.bib" target="_blank">BibTex</a>
-										| <a href="https://arxiv.org/abs/2110.13290" target="_blank">Link</a>
-										<br><award><b>Best Paper Award</b></award>
-									</p></li>
-
-									<li id="publication-ibsp">
-									<p>
-										<b>Interpretable Business Survival Prediction</b><br>
-										<font color="#aaaaaa">Anish Krishna Vallapuram, Nikhil Nanda, <font color="#000000"><u>Young D. Kwon</u></font>, and Pan Hui</font><br>
-										<i><font color="red">ASONAM 2021</font></i>
-										| <a href="papers/articles/vallapuram_interpretable_asonam21.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/vallapuram_interpretable_asonam21.bib" target="_blank">BibTex</a>
-										| <a href="https://dl.acm.org/doi/abs/10.1145/3487351.3488353" target="_blank">Link</a>
-									</p></li>
-
-									<li id="publication-ain">
-									<p>
-										<b>IAN: Interpretable Attention Network for Churn Prediction in LBSNs</b><br>
-										<font color="#aaaaaa">Liang-Yu Chen, Yutong Chen, <font color="#000000"><u>Young D. Kwon</u></font>, Youwen Kang, and Pan Hui</font><br>
-										<i><font color="red">ASONAM 2021</font></i>
-										| <a href="papers/articles/chen_ian_asonam21.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/chen_ian_asonam21.bib" target="_blank">BibTex</a>
-										| <a href="https://dl.acm.org/doi/10.1145/3487351.3488328" target="_blank">Link</a>
+									<li id="publication-contauth"><p>
+										<b>ContAuth: Continual Learning Framework for Behavioral-based User Authentication</b><br>
+										<font color="#aaaaaa">Jagmohan Chauhan, <font color="#000000"><u>Young D. Kwon</u></font>, Pan Hui, and Cecilia Mascolo</font><br>
+										<i><font color="red">IMWUT/UbiComp 2021</font></i>
+										| <a href="papers/articles/chauhan_contauth_imwut20.pdf" target="_blank">PDF</a>
+										| <a href="papers/bibs/chauhan_contauth_imwut20.bib" target="_blank">BibTex</a>
+										| <a href="https://dl.acm.org/doi/10.1145/3432203" target="_blank">Link</a>
 									</p></li>
 
 									<li id="publication-fasticarl">
@@ -557,89 +541,16 @@
 										| <a href="https://www.isca-speech.org/archive/interspeech_2021/kwon21_interspeech.html" target="_blank">Link</a>
 									</p></li>
 
-									<li id="publication-knowing"><p>
-										<b>Knowing when we do not know: Bayesian continual learning for sensing-based analysis tasks</b><br>
-										<font color="#aaaaaa">Sandra Servia Rodriguez, Cecilia Mascolo, and <font color="#000000"><u>Young D. Kwon</u></font> </font><br>
-										<i><font color="red">arXiv</font></i>
-										| <a href="papers/articles/servia-rodriguez_knowing_arxiv21.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/servia-rodriguez_knowing_arxiv21.bib" target="_blank">BibTex</a>
-										| <a href="https://arxiv.org/abs/2106.05872" target="_blank">Link</a>
-									</p></li>
-
-									<li id="publication-contauth"><p>
-										<b>ContAuth: Continual Learning Framework for Behavioral-based User Authentication</b><br>
-										<font color="#aaaaaa">Jagmohan Chauhan, <font color="#000000"><u>Young D. Kwon</u></font>, Pan Hui, and Cecilia Mascolo</font><br>
-										<i><font color="red">IMWUT/UbiComp 2021</font></i>
-										| <a href="papers/articles/chauhan_contauth_imwut20.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/chauhan_contauth_imwut20.bib" target="_blank">BibTex</a>
-										| <a href="https://dl.acm.org/doi/10.1145/3432203" target="_blank">Link</a>
-									</p></li>
-
-									<li id="publication-aquilis"><p>
-										<b>Aquilis: Using Contextual Integrity for Privacy Protection on Mobile Devices</b><br>
-										<font color="#aaaaaa">Abhishek Kumar, Tristan Braud, <font color="#000000"><u>Young D. Kwon</u></font>, and Pan Hui</font><br>
-										<i><font color="red">IMWUT/UbiComp 2021</font></i>
-										| <a href="papers/articles/kumar_aquilis_imwut20.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/kumar_aquilis_imwut20.bib" target="_blank">BibTex</a>
-										| <a href="https://dl.acm.org/doi/10.1145/3432205" target="_blank">Link</a>
-									</p></li>
-
-									<li id="publication-enemy-gate"><p>
-										<b>Enemy at the Gate: Evolution of Twitter User's Polarization During National Crisis</b><br>
-										<font color="#aaaaaa">Ehsan Ul Haq, Tristan Braud, <font color="#000000"><u>Young D. Kwon</u></font>, and Pan Hui</font><br>
-										<i><font color="red">ASONAM 2020</font></i>
-										| <a href="papers/articles/haq_enemy_asonam20.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/haq_enemy_asonam20.bib" target="_blank">BibTex</a>
-									</p></li>
-
-									<li id="publication-survey-comp-politics"><p>
-										<b>A Survey on Computational Politics</b><br>
-										<font color="#aaaaaa">Ehsan Ul Haq, Tristan Braud, <font color="#000000"><u>Young D. Kwon</u></font>, and Pan Hui.</font><br>
-										<i><font color="red">IEEE Access</font></i>
-										| <a href="papers/articles/haq_survey_access20.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/haq_survey_access20.bib" target="_blank">BibTex</a>
-										| <a href="https://ieeexplore.ieee.org/document/9245490" target="_blank">Link</a>
-									</p></li>
-
-									<li id="publication-percom-wip"><p>
-										<b>MyoKey: Surface Electromyography and Inertial Motion Sensing-based Text Entry in AR</b><br>
-										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Kirill A. Shatilov, Lik-Hang Lee, Serkan Kumyol, Kit Yung Lam, Yui-Pan Yau, and Pan Hui</font><br>
-										<i><font color="red">PerCom 2020 WIP</font></i>
-										| <a href="papers/articles/kwon_myokey_percom20.pdf" target="_blank">PDF</a>
-										| <a href="papers/slides/slides_kwon_myokey_percom20.pdf" target="_blank">Slides</a>
-										| <a href="papers/bibs/kwon_myokey_percom20.bib" target="_blank">BibTex</a>
-										| <a href="https://ieeexplore.ieee.org/abstract/document/9156084" target="_blank">Link</a>
-									</p></li>
-
-									<li id="publication-geolifecycle"><p>
-										<b>GeoLifecycle: User Engagement of Geographical Exploration and Churn Prediction in LBSNs</b><br>
-										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Dimitris Chatzopoulos, Ehsan Ul Haq, Raymond Chi-Wing Wong, and Pan Hui.</font><br>
-										<i><font color="red">IMWUT/UbiComp 2019</font></i>
-										| <a href="papers/articles/kwon_geolifecycle_imwut19.pdf" target="_blank">PDF</a>
-										| <a href="papers/slides/slides_kwon_geolifecycle_imwut19.pdf" target="_blank">Slides</a>
-										| <a href="papers/bibs/kwon_geolifecycle_imwut19.bib" target="_blank">BibTex</a>
-										| <a href="https://dl.acm.org/citation.cfm?id=3351250" target="_blank">Link</a>
-									</p></li>
-
-									<li id="publication-self-disclosure"><p>
-										<b>Effects of Ego Networks and Communities on Self-Disclosure in an Online Social Network</b><br>
-										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Reza Hadi Mogavi, Ehsan Ul Haq, Youngjin Kwon, Xiaojuan Ma, and Pan Hui</font><br>
-										<i><font color="red">ASONAM 2019</font></i>
-										| <a href="papers/articles/kwon_self-disclosure_asonam19.pdf" target="_blank">PDF</a>
-										| <a href="papers/slides/slides_kwon_self-disclosure_asonam19.pdf" target="_blank">Slides</a>
-										| <a href="papers/bibs/kwon_self-disclosure_asonam19.bib" target="_blank">BibTex</a>
-										| <a href="https://dl.acm.org/doi/10.1145/3341161.3342881" target="_blank">Link</a>
-										<br><award><b>Oral Presentation, Full Paper Acceptance Rate: 14%</b></award>
-									</p></li>
-
-									<li id="publication-ubicomp"><p>
-										<b>UbiComp/ISWC 2019: A Post-Conference Summary Report</b><br>
-										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Mohammed Khwaja, Neille-Ann H. Tan, Marla Narazani, Mikolaj P. Wozniak, Arshad Nasser, Rahul Majethia, Lucy Van Kleunen, Victoria Neumann, and Rajkarn Singh</font><br>
-										<i><font color="red">IEEE Pervasive Computing, 2019 (Impact Factor: 3.813)</font></i>
-										| <a href="papers/articles/kwon_ubicomp_pervasive19.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/kwon_ubicomp_pervasive19.bib" target="_blank">BibTex</a>
-										| <a href="https://ieeexplore.ieee.org/document/8968799?source=authoralert" target="_blank">Link</a>
-									</p></li>
+									<li id="publication-cl-benchmark">
+										<p>
+											<b>Exploring System Performance of Continual Learning for Mobile and Embedded Sensing Applications</b><br>
+											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Jagmohan Chauhan, Abhishek Kumar, Pan Hui, and Cecilia Mascolo</font><br>
+											<i><font color="red">SEC 2021</font></i>
+											| <a href="papers/articles/kwon_exploring_sec21.pdf" target="_blank">PDF</a>
+											| <a href="papers/bibs/kwon_exploring_sec21.bib" target="_blank">BibTex</a>
+											| <a href="https://arxiv.org/abs/2110.13290" target="_blank">Link</a>
+											<br><award><b>Best Paper Award</b></award>
+										</p></li>
 
 								</ul>
 							</div>
@@ -924,6 +835,11 @@
 							<div class="span12 list">
 								<div class="section">Honors & Awards</div>
 								<ul class="news">
+
+									<li class="row-fluid">
+										<div class="news-date span2">2024</div>
+										<div class="news-content span10"><award>Silver Medal</award> at Samsung Best Paper Award 2024</div>
+									</li>
 
 									<li class="row-fluid">
 										<div class="news-date span2">2021</div>
