minor update on intro

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 							</p>
 
 							<p>
-								My work has earned the <b>Best Paper Award at SEC '21</b> and <b>Samsung Best Paper Silver Award 2024</b>, with publications in ICML, NeurIPS, SenSys, IPSN, and IMWUT/UbiComp. I develop resource-efficient solutions that make advanced AI accessible on everyday devices with strict hardware constraints.
+								My work has earned the <b>Best Paper Award at SEC '21</b> and <b>Samsung Best Paper Silver Award 2024</b>, with publications in AI (ICML, NeurIPS) and Systems (SenSys, IPSN, TMC, MobiCom, and IMWUT). I develop resource-efficient solutions that make advanced AI accessible on everyday devices with strict hardware constraints.
 							</p>
 
 							<p>
