- Updated link to metaclbench
- Updated time to wallpaper intro video

--- a/research.html
+++ b/research.html
@@ -158,7 +158,7 @@
 											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Sijia Li*, Lik-Hang Lee, and Pan Hui</font><br>
 											<i><font color="red">arXiv 2025</font></i>
 											| <a href="papers/articles/li_kwon_metaclbench_2025.pdf" target="_blank">PDF</a>
-											| <a href="https://arxiv.org/abs/" target="_blank">Link</a>
+											| <a href="https://arxiv.org/abs/2504.00174" target="_blank">Link</a>
 											| * Co-first authors
 										</p></li>
 
