--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 									<p>
 										<b>Personalized On-Device AI Wallpaper</b><br>
 										<i><font color="red">Galaxy S24 & S25, Z Flip6 & Fold6</font></i>
-										| <a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2600s" target="_blank">Samsung Galaxy Unpacked Event</a>
+										| <a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2580s" target="_blank">Samsung Galaxy Unpacked Event</a>
 									</p></li>
 
 									<li id="aiproducts-super-resolution">
@@ -411,7 +411,7 @@
 											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Sijia Li*, Lik-Hang Lee, and Pan Hui</font><br>
 											<i><font color="red">arXiv 2025</font></i>
 											| <a href="papers/articles/li_kwon_metaclbench_2025.pdf" target="_blank">PDF</a>
-											| <a href="https://arxiv.org/abs/" target="_blank">Link</a>
+											| <a href="https://arxiv.org/abs/2504.00174" target="_blank">Link</a>
 											| * Co-first authors
 										</p></li>
 
