added video links to ai products

--- a/index.html
+++ b/index.html
@@ -378,12 +378,17 @@
 										<b>Personalized On-Device AI Wallpaper</b><br>
 										<i><font color="red">Galaxy S24 & S25, Z Flip6 & Fold6</font></i>
 										| <a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2580s" target="_blank">Samsung Galaxy Unpacked Event</a>
+										| <a href="https://www.youtube.com/shorts/uqVSq6fTcx8" target="_blank">Shorts (KR)</a>
+										| <a href="https://www.youtube.com/shorts/hY7qZKx1owc" target="_blank">Shorts (EN)</a>
+										| <a href="https://www.youtube.com/watch?v=zk7_8ZruGt4" target="_blank">YouTube (KR)</a>
+										| <a href="https://www.youtube.com/watch?v=T3piLiO9MEQ" target="_blank">YouTube (EN)</a>
 									</p></li>
 
 									<li id="aiproducts-super-resolution">
 										<p>
 											<b>Efficient On-Device Super Resolution</b><br>
 											<i><font color="red">Galaxy S25</font></i>
+											| <a href="https://www.youtube.com/watch?v=KNnVPUaGMeQ" target="_blank">YouTube</a>
 										</p></li>
 								</ul>
 							</div>
