--- a/files/travelmap.html
+++ b/files/travelmap.html
@@ -76,6 +76,7 @@
                 ['Turkey', 3],
                 ['Taiwan', 3],
                 ['Germany', 3],
+                ['Poland', 3],
                 ['Austria', 3],
                 ['Mexico', 2],
                 ['Finland', 2],
@@ -136,6 +137,7 @@
                     <li> Turkey </li>
                     <li> Taiwan </li>
                     <li> Germany </li>
+                    <li> Poland </li>
                     <li> Austria </li>
                     <li> Mexico </li>
                     <li> Finland </li>
