added sr teaser image

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 									</div>
 
 									<div id="aiproducts-super-resolution" class="project-entry">
-										<div class="project-left span4"><a href="images/projects/ai_wallpaper/teaser.gif"><img src="images/projects/ai_wallpaper/teaser.gif"></a></div>
+										<div class="project-left span4"><a href="images/projects/on-device-sr/teaser.png"><img src="images/projects/on-device-sr/teaser.png"></a></div>
 										<div class="project-right span8">
 											<b>Efficient On-Device Super Resolution</b><br>
 											<i><font color="red">Galaxy S25</font></i>
