--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 								<li class="row-fluid">
 									<span class="news-date span3">May, 2025</span>
-									<span class="news-content span9">I have been recognised as an <a href="https://mlcommons.org/about-us/programs/" target="_blank">ML and Systems Rising Star</a> by MLCommons! <font color="red">[Honours/Awards]</font>
+									<span class="news-content span9">I have been recognised as an <a href="https://mlcommons.org/about-us/programs/" target="_blank">ML and Systems Rising Star</a> by MLCommons! See you all in San Francisco! <font color="red">[Honours/Awards]</font>
 									</span>
 								</li>
 
