Added a odtta arxiv paper

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 								</li>
 
 								<li class="row-fluid">
-									<span class="news-date span3">Apr, 2025</span>
-									<span class="news-content span9">Our GenAI team's another successful commercialisation, <a href="" target="_blank">On-device Super-Resolution</a>, has been enabled on the latest flagship Samsung smartphones: <b>Galaxy S25, S25+, and S25 Ultra!</b> (<a href="https://www.youtube.com/watch?v=KNnVPUaGMeQ" target="_blank">YouTube</a>) <font color="red">[AI Product]</font>
+									<span class="news-date span3">Feb, 2025</span>
+									<span class="news-content span9">Our GenAI team's another successful commercialisation, <b>On-device Super-Resolution</b>, has been enabled on the latest flagship Samsung smartphones: <b>Galaxy S25, S25+, and S25 Ultra!</b> (<a href="https://www.youtube.com/watch?v=KNnVPUaGMeQ" target="_blank">YouTube</a>) <font color="red">[AI Product]</font>
 									</span>
 								</li>
 
@@ -204,7 +204,7 @@
 
 								<li class="row-fluid">
 									<span class="news-date span3">Sep, 2024</span>
-									<span class="news-content span9">Our paper <a href="" target="_blank">"TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices"</a> is accepted by NeurIPS 2024 <font color="red">[Paper]</font></span>
+									<span class="news-content span9">Our paper <a href="papers/articles/jia_tinytta_neurips24.pdf" target="_blank">"TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices"</a> is accepted by NeurIPS 2024 <font color="red">[Paper]</font></span>
 								</li>
 
 								<li class="row-fluid">
@@ -407,6 +407,17 @@
 											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Abhinav Mehrotra, Malcolm Chadwick, Albert Gil Ramos, and Sourav Bhattacharya</font><br>
 											<i><font color="red">arXiv 2025</font></i>
 										</p></li> -->
+
+									<div id="preprints-odtta" class="project-entry">
+										<div class="project-left span4"><a href="images/projects/odtta/teaser.png"><img src="images/projects/odtta/teaser.png"></a></div>
+										<div class="project-right span8">
+											<b>On-demand Test-time Adaptation for Edgge Devices</b><br>
+											<font color="#aaaaaa">Xiao MA, <font color="#000000"><u>Young D. Kwon</u></font>, and Dong MA</font><br>
+											<i><font color="red">arXiv 2025</font></i>
+											| <a href="papers/articles/ma_odtta_2025.pdf" target="_blank">PDF</a>
+											| <a href="https://arxiv.org/abs/2505.00986" target="_blank">Link</a>
+										</div>
+									</div>
 
 									<div id="preprints-metaclbench" class="project-entry">
 										<div class="project-left span4"><a href="images/projects/metaclbench/teaser.png"><img src="images/projects/metaclbench/teaser.png"></a></div>
