--- a/research.html
+++ b/research.html
@@ -152,24 +152,33 @@
 								<div class="section">Preprints</div>
 								<ul>
 
+									<li id="preprints-odtta">
+									<p>
+										<b>On-demand Test-time Adaptation for Edgge Devices</b><br>
+										<font color="#aaaaaa">Xiao MA, <font color="#000000"><u>Young D. Kwon</u></font>, and Dong MA</font><br>
+										<i><font color="red">arXiv 2025</font></i>
+										| <a href="papers/articles/ma_odtta_2025.pdf" target="_blank">PDF</a>
+										| <a href="https://arxiv.org/abs/2505.00986" target="_blank">Link</a>
+									</p></li>
+
 									<li id="preprints-metaclbench">
-										<p>
-											<b>MetaCLBench: Meta Continual Learning Benchmark on Resource-Constrained Edge Devices</b><br>
-											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Sijia Li*, Lik-Hang Lee, and Pan Hui</font><br>
-											<i><font color="red">arXiv 2025</font></i>
-											| <a href="papers/articles/li_kwon_metaclbench_2025.pdf" target="_blank">PDF</a>
-											| <a href="https://arxiv.org/abs/2504.00174" target="_blank">Link</a>
-											| * Co-first authors
-										</p></li>
+									<p>
+										<b>MetaCLBench: Meta Continual Learning Benchmark on Resource-Constrained Edge Devices</b><br>
+										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Sijia Li*, Lik-Hang Lee, and Pan Hui</font><br>
+										<i><font color="red">arXiv 2025</font></i>
+										| <a href="papers/articles/li_kwon_metaclbench_2025.pdf" target="_blank">PDF</a>
+										| <a href="https://arxiv.org/abs/2504.00174" target="_blank">Link</a>
+										| * Co-first authors
+									</p></li>
 
 									<li id="preprints-leantta">
-										<p>
-											<b>LeanTTA: A Backpropagation-Free and Stateless Approach to Quantized Test-Time Adaptation on Edge Devices</b><br>
-											<font color="#aaaaaa">Cynthia Dong, Hong Jia, <font color="#000000"><u>Young D. Kwon</u></font>, Georgios Rizos, and Cecilia Mascolo</font><br>
-											<i><font color="red">arXiv 2025</font></i>
-											| <a href="papers/articles/dong_leantta_2025.pdf" target="_blank">PDF</a>
-											| <a href="https://arxiv.org/abs/2503.15889v1" target="_blank">Link</a>
-										</p></li>
+									<p>
+										<b>LeanTTA: A Backpropagation-Free and Stateless Approach to Quantized Test-Time Adaptation on Edge Devices</b><br>
+										<font color="#aaaaaa">Cynthia Dong, Hong Jia, <font color="#000000"><u>Young D. Kwon</u></font>, Georgios Rizos, and Cecilia Mascolo</font><br>
+										<i><font color="red">arXiv 2025</font></i>
+										| <a href="papers/articles/dong_leantta_2025.pdf" target="_blank">PDF</a>
+										| <a href="https://arxiv.org/abs/2503.15889v1" target="_blank">Link</a>
+									</p></li>
 
 									<li id="preprints-hidenseek">
 									<p>
