--- a/index.html
+++ b/index.html
@@ -372,9 +372,12 @@
 									<div id="aiproducts-wallpaper" class="project-entry">
 										<div class="project-left span4"><a href="images/projects/ai_wallpaper/teaser.gif"><img src="images/projects/ai_wallpaper/teaser.gif"></a></div>
 										<div class="project-right span8">
-											<b>Personalized On-Device AI Wallpaper</b><br>
+											<b>Personalised On-Device AI Wallpaper</b><br>
+											Featured at the <a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2580s" target="_blank">Samsung Galaxy Unpacked Event</a> and documented in <a href="https://research.samsung.com/blog/Sentimental-and-Object-Preserving-On-Device-AI-Wallpaper" target="_blank">Technical Blogpost</a>. <a href="https://www.youtube.com/watch?v=zk7_8ZruGt4" target="_blank">YouTube Video</a> showcasing this technology exceeded 390,000 views, while <a href="https://www.youtube.com/shorts/hY7qZKx1owc" target="_blank">short-form content</a> generated 28,000+ likes, demonstrating significant market interest and technological impact.<br>
+											<!-- Showcased this innovative AI technology at the <a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2580s" target="_blank">Samsung Galaxy Unpacked Event</a>, with complementary <a href="https://research.samsung.com/blog/Sentimental-and-Object-Preserving-On-Device-AI-Wallpaper" target="_blank">Research Blogpost</a> coverage. Related <a href="https://www.youtube.com/watch?v=zk7_8ZruGt4" target="_blank">YouTube (KR)</a> video achieved impressive engagement with over 390,000 views, while <a href="https://www.youtube.com/shorts/hY7qZKx1owc" target="_blank">short-form content (EN)</a> generated 28,000+ likes, demonstrating strong public interest in the technology.<br> -->
 											<i><font color="red">Galaxy S24 & S25, Z Flip6 & Fold6</font></i>
 											| <a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2580s" target="_blank">Samsung Galaxy Unpacked Event</a>
+											| <a href="https://research.samsung.com/blog/Sentimental-and-Object-Preserving-On-Device-AI-Wallpaper" target="_blank">Research Blogpost</a>
 											| <a href="https://www.youtube.com/shorts/uqVSq6fTcx8" target="_blank">Shorts (KR)</a>
 											| <a href="https://www.youtube.com/shorts/hY7qZKx1owc" target="_blank">Shorts (EN)</a>
 											| <a href="https://www.youtube.com/watch?v=zk7_8ZruGt4" target="_blank">YouTube (KR)</a>
@@ -386,6 +389,7 @@
 										<div class="project-left span4"><a href="images/projects/on-device-sr/teaser.png"><img src="images/projects/on-device-sr/teaser.png"></a></div>
 										<div class="project-right span8">
 											<b>Efficient On-Device Super Resolution</b><br>
+											Enabled an extremely efficient on-device super-resolution, delivering superior image quality enhancement while significantly reducing computational requirements. This technology was successfully commercialised on Samsung's flagship Galaxy S25 smartphone and featured in official <a href="https://www.youtube.com/watch?v=KNnVPUaGMeQ" target="_blank">Samsung promotional materials</a>.<br>
 											<i><font color="red">Galaxy S25</font></i>
 											| <a href="https://www.youtube.com/watch?v=KNnVPUaGMeQ" target="_blank">YouTube</a>
 										</div>
