Added photo of SEC's best paper award

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
 											| <a href="papers/articles/kwon_exploring_sec21.pdf" target="_blank">PDF</a>
 											| <a href="papers/bibs/kwon_exploring_sec21.bib" target="_blank">BibTex</a>
 											| <a href="https://arxiv.org/abs/2110.13290" target="_blank">Link</a>
-											<br><award><b>Best Paper Award</b></award>
+											<br><award><b>Best Paper Award</b></award> <a href="images/projects/cl-benchmark/SEC_2021_Best_Paper_Award.jpg" target="_blank">(Photo)</a>
 										</div>
 									</div>
 
